Update install.tomcat8.sh